fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ html{
 body{
     height: 100vh;
     max-width: 1440px;
-    overflow: hidden;
     background-color : white; 
     margin: 0 auto;
     padding: 10cm;
